--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#join">Join Now</a></li>
+                <li><button id="theme-toggle" aria-label="Toggle Dark/Light Mode"></button></li>
             </ul>
         </nav>
     </header>
