Update index.html with MagicUI integration

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyMC: A New Horizon for Minecraft Servers</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magic.css@1.0.0/dist/magic.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magic-sdk/dist/magic.js">
     <style>
         body {
             display: flex;
@@ -36,6 +36,6 @@
         <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/magic.css@1.0.0/dist/magic.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/magic-sdk/dist/magic.js"></script>
 </body>
 </html>
