Update index.html with MagicUI integration

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyMC: A New Horizon for Minecraft Servers</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magic.css@1.2.2/dist/magic.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magic.css@1.1.0/1.1.0/magic.min.css">
     <style>
         body {
             display: flex;
@@ -35,7 +35,5 @@
         <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
         <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/magic.css@1.2.2/dist/magic.min.js"></script>
 </body>
 </html>
