--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     </style>
 </head>
 <body>
-    <div class="container magic-box-reveal">
-        <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
+    <div class="container magic-slideInLeft">
+        <h1 class="magic-slideInLeft">FlyMC: A New Horizon for Minecraft Servers</h1>
+        <p class="magic-slideInLeft">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
+        <p class="magic-slideInLeft">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
 </body>
 </html>
