--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             const elements = document.querySelectorAll('.magic');
             elements.forEach(element => {
                 element.style.visibility = 'visible';
-                element.classList.add('magictime', 'slideLeft'); // Use the appropriate animation class
+                element.classList.add('magictime', 'magicFadeIn'); // Use the fade-in animation class
             });
         });
     </script>
