--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="magic">FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p class="magic">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p class="magic">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
+        <h1 class="magic magictime magicSlideInLeft">FlyMC: A New Horizon for Minecraft Servers</h1>
+        <p class="magic magictime magicSlideInUp">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
+        <p class="magic magictime magicFadeIn">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
 
     <script>
@@ -36,7 +36,6 @@
             const elements = document.querySelectorAll('.magic');
             elements.forEach(element => {
                 element.style.visibility = 'visible';
-                element.classList.add('magictime', 'magicFadeIn'); // Use the fade-in animation class
             });
         });
     </script>
