--- a/index.html
+++ b/index.html
@@ -4,40 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlyMC: A New Horizon for Minecraft Servers</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magic.css@1.4.8/dist/magic.css">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            text-align: center;
-        }
-        h1, p {
-            visibility: hidden; /* Start hidden */
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="magic magictime magicSlideInLeft">FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p class="magic magictime magicSlideInUp">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p class="magic magictime magicFadeIn">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
+        <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
+        <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
+        <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const elements = document.querySelectorAll('.magic');
-            elements.forEach(element => {
-                element.style.visibility = 'visible';
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
