--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="background"></div>
     <div class="container">
-        <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
+        <h1 class="reveal">FlyMC: A New Horizon for Minecraft Servers</h1>
+        <p class="reveal">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
+        <p class="reveal">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
     </div>
     <script src="script.js"></script>
 </body>
