--- a/index.html
+++ b/index.html
@@ -7,12 +7,31 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="background"></div>
-    <div class="container">
-        <h1 class="reveal">FlyMC: A New Horizon for Minecraft Servers</h1>
-        <p class="reveal">Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
-        <p class="reveal">Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
-    </div>
+    <div class="grid-background"></div>
+    <header>
+        <div class="logo">FlyMC</div>
+        <nav>
+            <ul>
+                <li><a href="#">What's new</a></li>
+                <li><a href="#">Introducing FlyMC</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
+        <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
+        <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
+        <div class="cta-buttons">
+            <a href="#" class="btn">Sign in</a>
+            <a href="#" class="btn btn-secondary">Learn more →</a>
+        </div>
+    </main>
+    <footer>
+        <div class="trustpilot">
+            <span>★★★★★</span>
+            <span>5 stars on Trustpilot</span>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
