--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 <body>
     <div class="grid-background"></div>
     <header>
-        <div class="logo">FlyMC</div>
+        <div class="logo-container">
+            <img src="logo.png" alt="FlyMC Logo" class="logo">
+        </div>
         <nav>
             <ul>
-                <li><a href="#">What's new</a></li>
-                <li><a href="#">Introducing FlyMC</a></li>
+                <li><a href="whats-new.html">What's new</a></li>
+                <li><a href="learn-more.html">Learn More</a></li>
             </ul>
         </nav>
     </header>
@@ -22,14 +24,13 @@
         <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
         <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
         <div class="cta-buttons">
-            <a href="#" class="btn">Sign in</a>
-            <a href="#" class="btn btn-secondary">Learn more →</a>
+            <a href="#" class="btn">Join our Server</a>
+            <a href="learn-more.html" class="btn btn-secondary">Learn more →</a>
         </div>
     </main>
     <footer>
-        <div class="trustpilot">
-            <span>★★★★★</span>
-            <span>5 stars on Trustpilot</span>
+        <div class="copyright">
+            &copy; 2024 FlyMC
         </div>
     </footer>
     <script src="script.js"></script>
