--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 <body>
     <div class="grid-background"></div>
     <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="FlyMC Logo" class="logo">
-        </div>
         <nav>
             <ul>
                 <li><a href="whats-new.html">What's new</a></li>
@@ -20,6 +17,9 @@
         </nav>
     </header>
     <main>
+        <div class="logo-container">
+            <img src="cover.png" alt="FlyMC Logo" class="logo">
+        </div>
         <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
         <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
         <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
