--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
     <header>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="whats-new.html">What's new</a></li>
                 <li><a href="learn-more.html">Learn More</a></li>
+                <li><a href="store.html">Store</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="logo-container">
-            <img src="cover.png" alt="FlyMC Logo" class="logo">
-        </div>
+        <img src="cover.png" alt="FlyMC Logo" class="logo">
         <h1>FlyMC: A New Horizon for Minecraft Servers</h1>
         <p>Welcome to FlyMC, where the Minecraft experience is redefined with elegance and tranquility. Join us in a journey beyond the ordinary, into a realm where creativity and community flourish together.</p>
         <p>Our server is currently under construction. Stay tuned for an amazing adventure coming soon!</p>
-        <div class="cta-buttons">
-            <a href="#" class="btn">Join our Server</a>
-            <a href="learn-more.html" class="btn btn-secondary">Learn more →</a>
-        </div>
+        <a href="learn-more.html" class="btn">Learn More</a>
     </main>
     <footer>
         <div class="copyright">
