--- a/learn-more.html
+++ b/learn-more.html
@@ -9,13 +9,12 @@
 <body>
     <div class="grid-background"></div>
     <header>
-        <div class="logo-container">
-            <img src="logo.png" alt="FlyMC Logo" class="logo">
-        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="whats-new.html">What's new</a></li>
+                <li><a href="learn-more.html">Learn More</a></li>
+                <li><a href="store.html">Store</a></li>
             </ul>
         </nav>
     </header>
@@ -28,5 +27,6 @@
             &copy; 2024 FlyMC
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
