--- a/store.html
+++ b/store.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlyMC Store</title>
+    <title>Store - FlyMC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -19,7 +19,7 @@
         </nav>
     </header>
     <main>
-        <h1>FlyMC Store</h1>
+        <h1>Store</h1>
         <h2>Ranks</h2>
         <ul>
             <li>Iron - $0.99 <button onclick="addToCart('Iron', 0.99)">Add to Cart</button></li>
@@ -34,7 +34,10 @@
             <li>VIP+ - $2.99 <button onclick="addToCart('VIP+', 2.99)">Add to Cart</button></li>
             <li>VIP++ - $4.49 <button onclick="addToCart('VIP++', 4.49)">Add to Cart</button></li>
         </ul>
-        <a href="cart.html" class="btn">View Cart</a>
+        <h2>Cart</h2>
+        <div id="cart-items"></div>
+        <div id="cart-total"></div>
+        <button onclick="generateInvoice()">Generate Invoice</button>
     </main>
     <footer>
         <div class="copyright">
