--- a/store.html
+++ b/store.html
@@ -192,16 +192,16 @@
         <div class="logo-container">
             <img src="cover.png" alt="FlyMC Logo" class="logo">
         </div>
-        <h1>Welcome to FlyMC</h1>
-        <p>A New Horizon for Minecraft Servers</p>
+        <h1>Welcome to FlyMC - Store</h1>
+        <p>A Store for all your needs</p>
         <div class="cta-buttons">
             <a href="/join" class="btn">Join our Server</a>
             <a href="/learn-more" class="btn btn-secondary">Learn More</a>
         </div>
     </main>
     <footer>
-        <div class="copyright">
-            &copy; 2024 FlyMC
+        <div class="Store">
+            STORE
         </div>
     </footer>
 
